plugins {
    id 'org.unbroken-dome.test-sets' version '1.2.0'
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    baseName = 'what-to-watch-boot'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

testSets {
    benchmark
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

dependencies {
    compileOnly("org.projectlombok:lombok:$lombokVersion")
    compile("org.springframework.boot:spring-boot-starter-actuator")
    compile("org.springframework.boot:spring-boot-starter-jersey")
    compile("org.springframework.boot:spring-boot-starter-data-redis")
    compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-starter-undertow:$springBootVersion")
    compile("com.google.guava:guava:$guavaVersion")
    compile("redis.clients:jedis:$jedisVersion")
    compile("org.jsoup:jsoup:$jsoupVersion")
    compile("net.jodah:failsafe:$failsafeVersion")
    compile("io.dropwizard.metrics:metrics-core:$metricsVersion")
    compile project(":what-to-watch-core")

    testCompile("org.springframework.boot:spring-boot-starter-test")

    benchmarkCompile("org.openjdk.jmh:jmh-core:$jmhVersion")
    benchmarkCompile("org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion")
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.0'
}

springBoot {
    mainClass = 'pl.ciruk.whattowatch.WhatToWatchBoot'
}

findbugs {
    sourceSets = [sourceSets.main, sourceSets.test]
}

pmd {
    sourceSets = [sourceSets.main, sourceSets.test]
}

test {
    jvmArgs += ["--add-modules", "java.xml.bind"]
}